# Langchain-test

./: .gitignore  README.md  pyproject.toml
langchaintest/notebook/: test.ipynb
langchaintest/src/: chroma.py  main.py
langchaintest/src/models/: ollama.py
notebook/: test.ipynb
src/: main.py
