[tool.poetry]
name = "langchaintest"
version = "0.1.0"
description = ""
authors = ["sakshamshahu <sakshamshahu.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.0.19"
unstructured = { version = "^0.12.3", python = ">=3.10,<3.12"}
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
opencv-python = "^4.9.0.80"
unstructured-inference = "^0.7.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
