[tool.poetry]
name = "langchaintest"
version = "0.1.0"
description = ""
authors = ["sakshamshahu <sakshamshahu.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain-community = "^0.0.19"
unstructured = { version = "^0.12.3", python = ">=3.10,<3.12"}
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
opencv-python = "^4.9.0.80"
unstructured-inference = "^0.7.24"
pikepdf = "^8.12.0"
pypdf = "^4.0.1"
pytesseract = "^0.3.10"
unstructured-pytesseract = "^0.3.12"
pycrypto = "2.6"
chromadb = "^0.4.22"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
